--- a/src/index.css
+++ b/src/index.css
@@ -97,6 +97,7 @@ body {
 
 .home-card:hover {
   transform: scale(1.1);
+  z-index: 10;
 }
 
 .home-card .card-body {
@@ -133,7 +134,17 @@ body {
   background-color: rgb(110, 110, 110);
 }
 
-
 #nav-image {
   height: 40px;
+}
+
+.__react_component_tooltip {
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-out !important;
+  opacity: 0 !important;
+  visibility: visible;
+}
+
+.__react_component_tooltip.show {
+  visibility: visible;
+  opacity: 1 !important;
 }
