--- a/src/index.css
+++ b/src/index.css
@@ -29,10 +29,10 @@ body {
   flex-wrap: wrap;
 } */
 
-.movies-container {
+/* .movies-container {
 	position: relative;
 	transition: transform 0.2s;
-}
+} */
 
 .movie-card img {
   max-width: 180px;
@@ -94,7 +94,9 @@ body {
 .minus-circle-btn:hover {
   color: rgb(255, 0, 0);
 }
-
+.home-card {
+  transition: transform 0.3s ease-out;
+}
 .home-card:hover {
   transform: scale(1.1);
   z-index: 10;
@@ -150,11 +152,41 @@ body {
 }
 
 #imdb-image {
-  height: 27px;
-  margin: 5px;
-  margin-right: 1rem;
+  height: 30px;
+  margin-top: 1rem;
 }
-#yt-image {
-  height: 27px;
-  margin: 5px;
+
+.btn-wrapper {
+  justify-content: space-between;
+  text-align:center;
+}
+
+.btn-wrapper > .overlay-btn {
+  border: none;
+  background-color: rgb(75, 75, 75);
+  padding: 0;
+  margin: 2px;
+  width: 45%;
+  position:static;
+  opacity: 0.8;
+  transition: background-color 0.3s ease-out;
+  -webkit-transition: background-color 0.3s ease-out;
+}
+.btn-wrapper > .overlay-btn:hover {
+  background-color:rgb(110, 110, 110);
+  border: none;
+}
+
+.trailer-btn {
+  background-color: rgb(75, 75, 75);
+  color: white;
+  border: none;
+  opacity: 0.8;
+  transition: background-color 0.3s ease-out;
+  -webkit-transition: background-color 0.3s ease-out;
+}
+
+.trailer-btn:hover {
+  background-color: rgb(100, 100, 100);
+  color: white;
 }
